[FIX] web_editor: fix selection style for icons
The code added in [1] to update style for multi image selection
is not compatible with .fa icons and causes a strange behaviour when
trying to select one.
The goal of this commit is to fix style for selected icons on media
dialog.

Also fixes the fact the icons were not centered before.

[1]: https://github.com/odoo/odoo/commit/bb65b742e7eec000248b7df0f048dda61ac3ff5a

closes odoo/odoo#67846

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -313,7 +313,7 @@ body .modal {
                     margin: 5px;
                     width: 50px;
                     height: 50px;
-                    padding: 15px;
+                    padding: 15px 0; // 0 allows to center properly
                     cursor: pointer;
                 }
             }
